<?xml version="1.0"?>
<package>
  <name>cyton_gamma_300_controllers</name>
  <version>0.0.1</version>
  <description>The cyton_gamma_300_controllers package</description>

  <maintainer email="selyunin.k.v@gmail.com">Konstantin Selyunin</maintainer>

  <license>BSD</license>

  <author email="selyunin.k.v@gmail.com">Konstantin Selyunin</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>dynamixel_controllers</run_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
