<package>
  <name>cyton_gamma_300_gazebo</name>
  <version>0.1.0</version>
  <description>cyton_gamma_300_gazebo</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <maintainer email="selyunin.k.v@gmail.com">Konstantin Selyunin</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>cyton_gamma_300_controllers</run_depend> 
  <run_depend>cyton_gamma_300_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
